clean up java app